--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,8 +6,7 @@
         android:largeScreens="true"
         android:normalScreens="true"
         android:smallScreens="true"
-        android:xlargeScreens="true"/>
-
+        android:xlargeScreens="true" />
 
     <uses-permission android:name="android.permission.INTERNET" />
 
@@ -32,7 +31,8 @@
         </activity>
         <activity android:name=".gg2" />
         <activity android:name=".gg3" />
-        <activity android:name=".gg4"></activity>
+        <activity android:name=".gg4" />
+        <activity android:name=".gg5"></activity>
     </application>
 
 </manifest>
